plugins {
    id 'com.gradleup.shadow' version '9.4.1'
    id 'java'
}

group 'fr.danakube.danacobblegen'
version '2.0.0'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(25))
    }
}

repositories {
    mavenCentral()
    maven {
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    maven { url = 'https://oss.sonatype.org/content/repositories/snapshots' }
    maven { url = 'https://oss.sonatype.org/content/repositories/central' }
    maven { url = "https://repo.codemc.org/repository/maven-public/" }
    maven {
        url = 'https://repo.extendedclip.com/content/repositories/placeholderapi/'
    }
    maven {
        url = 'https://repo.bg-software.com/repository/api/'
    }
    maven { url = 'https://jitpack.io' }
}

configurations.all {
    exclude group: 'org.bukkit', module: 'bukkit'
}

dependencies {
    compileOnly 'se.eris:notnull-instrumenter-maven-plugin:1.1.1'
    compileOnly 'org.jetbrains:annotations:23.0.0'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'

    implementation 'com.zaxxer:HikariCP:5.1.0'
    implementation("com.github.cryptomorin:XSeries:13.7.0") { transitive = false }
    implementation 'io.github.cdimascio:dotenv-java:2.3.1'

    compileOnly 'io.papermc.paper:paper-api:26.1.2.build.+'
    compileOnly 'world.bentobox:bentobox:2.4.0-SNAPSHOT'
    compileOnly 'me.clip:placeholderapi:2.11.6'
    compileOnly 'com.github.MilkBowl:VaultAPI:1.7'
    compileOnly 'commons-io:commons-io:2.14.0'
    compileOnly 'com.bgsoftware:SuperiorSkyblockAPI:2026.1'
}

shadowJar {
    dependsOn(jar)
    archiveClassifier.set('')
}

build {
    dependsOn shadowJar
}

test {
    useJUnitPlatform()
}
